<resources>
    <string name="app_name">Real Estate Manager</string>
    <plurals name="bedroom_plural">
        <item quantity="one">%d bedroom</item>
        <item quantity="other">%d bedrooms</item>
    </plurals>
    <plurals name="bathroom_plural">
        <item quantity="one">%d bathroom</item>
        <item quantity="other">%d bathrooms</item>
    </plurals>
    <string name="google_web_client_id" translatable="false">77269002192-r4c88c9efvrrfb410rd7ps27fa3khj9h.apps.googleusercontent.com</string>
    <string name="property_surface" translatable="false">%d %s</string>
    <string name="property_features">%d bed. - %d bath. - %s</string>
    <string name="property_features_tablet" translatable="false">%s - %s - %s</string>
    <string name="description_label">Description</string>
    <string name="property_label_surface">Surface</string>
    <string name="property_label_rooms">Nb. of rooms</string>
    <string name="property_label_bathrooms">Nb. of bathrooms</string>
    <string name="property_label_bedrooms">Nb. of bedrooms</string>
    <string name="property_label_rooms_tablet">Number of rooms</string>
    <string name="property_label_bathrooms_tablet">Number of bathrooms</string>
    <string name="property_label_bedrooms_tablet">Number of bedrooms</string>
    <string name="property_label_location">Location</string>
    <string name="property_type_flat">Flat</string>
    <string name="property_type_house">House</string>
    <string name="property_type_duplex">Duplex</string>
    <string name="property_type_penthouse">Penthouse</string>
    <string name="property_type_loft">Loft</string>
    <string name="property_type_manor">Manor</string>
    <string name="property_type_other">Other</string>
    <string name="property_label_amenities">Amenities</string>
    <string name="property_label_transportation">Transportation</string>
    <string name="property_poi_school">School</string>
    <string name="property_poi_store">Store</string>
    <string name="property_poi_park">Park</string>
    <string name="property_poi_restaurant">Restaurant</string>
    <string name="property_poi_bus">Bus</string>
    <string name="property_poi_subway">Subway</string>
    <string name="property_poi_tramway">Tramway</string>
    <string name="property_poi_train">Train</string>
    <string name="property_poi_airport">Airport</string>
    <string name="property_poi_hospital">Hospital</string>
    <string name="back_button_desc">Back button</string>
    <string name="property_sold_banner">SOLD</string>
    <string name="settings">Settings</string>
    <string name="settings_currency_label">Currency</string>
    <string name="settings_currency_desc">Changes the currency used throughout the app</string>
    <string name="settings_surface_unit_label">Surface unit</string>
    <string name="settings_surface_unit_desc">Changes the surface unit used throughout the app</string>
    <string name="settings_distance_unit_label">Distance unit</string>
    <string name="settings_distance_unit_desc">Changes the distance unit used throughout the app</string>
    <string name="info_icon_desc">Information icon</string>
    <string name="info_icon" translatable="false">i</string>
    <string name="property_sold_on">Sold on %s</string>
    <string name="property_for_sale_since">For sale since %s</string>
    <string name="property_address_clipboard">Address copied to clipboard</string>
    <string name="close_button_desc">Close button</string>
    <string name="log_out">Log out</string>
    <string name="property_price">Price</string>
    <string name="property_for_sale">For sale</string>
    <string name="zero" translatable="false">0</string>
    <string name="add_property_sold_on">Sold on</string>
    <string name="add_property_for_sale_since">For sale since</string>
    <string name="add_property_address_hint">Address</string>
    <string name="add_property_apartment_hint">Apartment, suite, etc (optional)</string>
    <string name="add_property_city_hint">City</string>
    <string name="add_property_state_region_hint">State / Region</string>
    <string name="add_property_zip_code_hint">Zip code</string>
    <string name="add_property_close_button_desc">Close suggestions</string>
    <string name="add_property_camera_permission_denied">Camera permission is denied</string>
    <string name="open_app_settings">Open settings</string>
    <string name="dialog_permission_required">Permission required</string>
    <string name="add_property_camera_dialog_message">Camera permission is required to take photos</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="camera_init_error">Error initializing camera</string>
    <string name="add_property_camera_btn_desc">Take a photo button</string>
    <string name="camera_capture_btn_desc">Capture button</string>
    <string name="camera_photo_mode">Photo</string>
    <string name="camera_flash_toggle_button_desc">Flash toggle button</string>
    <string name="camera_switch_lens_button_desc">Flip camera button</string>
    <string name="camera_captured_photo_preview_desc">Captured photo preview</string>
    <string name="camera_cancel_button_desc">Cancel button</string>
    <string name="camera_done_button_desc">Done button</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="list_add_property_fab_desc">Add property button</string>
    <string name="menu_main_drawer_title">Menu</string>
    <string name="close_button">Close</string>
    <string name="add_property_title">Add a property</string>
    <string name="add_property_delete_photo_desc">Delete photo</string>
    <string name="photo_preview_description_error">Please enter a description</string>
    <string name="draft_alert_dialog_title">Drafts available</string>
    <string name="draft_alert_dialog_message">You have drafts in progress</string>
    <string name="cancel">Cancel</string>
    <string name="draft_alert_dialog_negative">Add new property</string>
    <string name="continue_draft">Continue draft</string>
    <string name="save_draft_dialog_title">Draft in progress</string>
    <string name="save_draft_dialog_message">Do you want to save this draft ?</string>
    <string name="save_draft_dialog_negative">Discard</string>
    <string name="save">Save</string>
    <string name="add_property_type_error">Type required</string>
    <string name="plus_minus_surface_error">Invalid surface</string>
    <string name="plus_minus_rooms_error">Invalid number</string>
    <string name="add_property_save_button" translatable="false">SAVE</string>
    <string name="date_format">MMM d, yyyy</string>
    <string name="add_property_price_hint">Price (%s)</string>
    <string name="toast_selected_address_details_error">An error occurred while trying to get selected address details</string>
    <string name="toast_selected_address_details_failure">Failed to get selected address details</string>
    <string name="toast_selected_address_no_results">No results found for selected address</string>
    <string name="toast_draft_discarded">Draft has been discarded</string>
    <string name="toast_saving_draft">Saving draft…</string>
    <string name="toast_draft_saved">Draft has been saved</string>
    <string name="toast_draft_automatically_saved">Draft automatically saved</string>
    <string name="add_property_error_date_required">Date required</string>
    <string name="add_property_error_invalid_date">Invalid date</string>
    <string name="add_property_error_price_required">Price required</string>
    <string name="add_property_error_invalid_price">Invalid price</string>
    <string name="add_property_error_address_required">Address required</string>
    <string name="add_property_error_description_required">Description required</string>
    <string name="surface_feet_name">Feet</string>
    <string name="surface_feet_unit">sq ft</string>
    <string name="surface_meters_name">Meters</string>
    <string name="surface_meters_unit">sq m</string>
    <string name="currency_euro_name" translatable="false">Euro</string>
    <string name="currency_euro_symbol" translatable="false">€</string>
    <string name="currency_dollar_name" translatable="false">Dollar</string>
    <string name="currency_dollar_symbol" translatable="false">$</string>
    <string name="draft_overview" translatable="false">%s - %s - %s - %s - %s</string>
    <string name="draft_overview_field" translatable="false">%s %s</string>
    <string name="add_property_label_surface" translatable="false">Surface (%s)</string>
    <string name="add_property_label_rooms">Rooms</string>
    <string name="add_property_label_bathrooms">Bathrooms</string>
    <string name="add_property_label_bedrooms">Bedrooms</string>
    <string name="draft_overview_label_bedrooms">bed.</string>
    <string name="draft_overview_label_bathrooms">bath.</string>
    <string name="add_draft_overview_label_rooms">rooms</string>
    <string name="add_draft_overview_price_na">Price n/a</string>
    <string name="add_draft_overview_surface_na">surf. n/a</string>
    <string name="add_draft_overview_rooms_na">rooms n/a</string>
    <string name="draft_overview_bedrooms_na">bed. n/a</string>
    <string name="draft_overview_bathrooms_na">bath. n/a</string>
    <string name="draft_overview_type_na">Type not available</string>
    <string name="draft_overview_city_na">City not available</string>
    <string name="draft_overview_description_na">Description not available</string>
    <string name="duration_unit_years">years</string>
    <string name="duration_unit_months">months</string>
    <string name="main_menu_loan_simulator_title">Loan simulator</string>
    <string name="loan_simulator_amount_hint">Amount</string>
    <string name="loan_simulator_down_payment_hint">Down payment (optional)</string>
    <string name="loan_simulator_interest_hint">Interest rate</string>
    <string name="loan_simulator_insurance_hint">Insurance rate (optional)</string>
    <string name="duration">Duration</string>
    <string name="reset">Reset</string>
    <string name="loan_simulator_calculate_button_text">Calculate</string>
    <string name="loan_simulator_appbar_title">Loan simulator</string>
    <string name="loan_simulator_monthly_payment_label">Monthly payment</string>
    <string name="loan_simulator_monthly_interest_label">incl. interest</string>
    <string name="loan_simulator_monthly_insurance_label">incl. insurance</string>
    <string name="loan_simulator_yearly_payment_label">Yearly payment</string>
    <string name="loan_simulator_total_insurance_label">Total insurance</string>
    <string name="loan_simulator_total_interest_label">Total interest</string>
    <string name="loan_simulator_total_payment_label">Total payment</string>
    <string name="loan_simulator_error_amount">Amount required</string>
    <string name="loan_simulator_error_down_payment">Down payment cannot be greater than or equal to loan amount</string>
    <string name="loan_simulator_error_interest_rate_required">Interest rate required</string>
    <string name="loan_simulator_error_interest_rate_invalid">Invalid interest rate</string>
    <string name="loan_simulator_error_insurance_rate_invalid">Invalid insurance rate</string>
    <string name="loan_simulator_error_duration">Duration required</string>
    <string name="loan_simulator_note">Note: the displayed results are subject to rounding, which may result in potentially imprecise values.</string>
    <string name="loan_simulator_result_clipboard">Value copied to clipboard</string>
    <string name="drafts_title">Available drafts</string>
    <string name="draft_overview_date">Last edited on %s</string>
    <string name="draft_overview_date_formatter">MM-dd-yyyy hh:mm a</string>
    <string name="details_date_formatter">MM/dd/yy</string>
    <string name="photo_preview_added_toast">Photo successfully added</string>
</resources>