<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_photo_description"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/description_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_photo_description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect|textCapSentences"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_photo_cancel_button"
        style="@style/NegativeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/edit_photo_save_button"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="@id/edit_photo_description"
        app:layout_constraintTop_toBottomOf="@id/edit_photo_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_photo_save_button"
        style="@style/PositiveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@id/edit_photo_description"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@id/edit_photo_cancel_button"
        app:layout_constraintTop_toTopOf="@id/edit_photo_cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>