<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/camera_separator_Guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/camera_separator_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/camera_center_vertical_Guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <ImageButton
        android:id="@+id/camera_flash_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/camera_flash_toggle_button_desc"
        android:padding="8dp"
        android:src="@drawable/baseline_flash_off_24"
        app:layout_constraintBottom_toTopOf="@id/camera_PreviewView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_PreviewView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/camera_margin_top"
        app:layout_constraintBottom_toTopOf="@id/camera_separator_Guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/camera_focus_ring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/focus_ring"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/camera_photo_mode"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_separator_Guideline" />

    <ImageView
        android:id="@+id/camera_shutter_button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/camera_shutter_margin_bottom"
        android:importantForAccessibility="no"
        android:src="@drawable/shutter_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/camera_shutter_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:contentDescription="@string/camera_capture_btn_desc"
        android:src="@drawable/shutter_button"
        app:layout_constraintBottom_toBottomOf="@id/camera_shutter_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/camera_shutter_button_background" />

    <ImageButton
        android:id="@+id/camera_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/camera_cancel_button_desc"
        android:src="@drawable/camera_close_button"
        app:layout_constraintBottom_toBottomOf="@id/camera_shutter_button_background"
        app:layout_constraintEnd_toStartOf="@id/camera_shutter_button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/camera_shutter_button_background" />

    <ImageButton
        android:id="@+id/camera_switch_lens_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/camera_switch_lens_button_desc"
        android:src="@drawable/camera_switch_lens_button"
        app:layout_constraintBottom_toBottomOf="@id/camera_shutter_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/camera_shutter_button_background"
        app:layout_constraintTop_toTopOf="@id/camera_shutter_button_background" />

</androidx.constraintlayout.widget.ConstraintLayout>